# aoc-2022

./: Cargo.toml  rustfmt.toml
day-1/: Cargo.toml
day-1/src/: main.rs
day-2/src/: main.rs  strategy.rs
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/src/: main.rs
day-5/: Cargo.toml
day-5/src/: command.rs  crane.rs  main.rs  stacks.rs
day-6/: Cargo.toml
day-6/src/: main.rs
day-7/: Cargo.toml
day-7/src/: main.rs
day-8/: Cargo.toml
day-8/src/: main.rs
