[workspace]
members = [
    "day-1",
    "day-2",
    "day-3",
    "day-4",
    "day-5",
    "day-6",
    "day-7",
    "day-8",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
regex = "1.7.0"
itertools = "0.10.5"
yare = "1.0.2"
snafu = "0.7.3"
nom = "7.1.1"

[workspace.dependencies.ndarray]
version = "0.15.6"
features = ["rayon"]
